fix: z-index

--- a/packages/core/src/assets/bar-item.less
+++ b/packages/core/src/assets/bar-item.less
@@ -76,7 +76,6 @@
     border-radius: 2px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.12);
     margin-top: 40px;
-    z-index: 1;
 
     .w-e-bar-item-title {
       display: inline-block; /* 显示菜单标题 */
