--- a/packages/core/src/assets/modal.less
+++ b/packages/core/src/assets/modal.less
@@ -1,5 +1,5 @@
 .w-e-modal {
-  z-index: 2;
+  z-index: 1;
   background-color: #fff;
   position: absolute;
   border: 1px solid #e8e8e8;
